# hypergrep

./: CMakeLists.txt  CMakePresets.json  LICENSE  README.md  find.cpp  hg.cpp  ignore.cpp  multithreaded.cpp  search.cpp
doc/: NOTES.md  USAGE.md
include/: compiler.hpp  constants.hpp  directory_search.hpp  directory_search_options.hpp  file_context.hpp  file_filter.hpp  file_search.hpp  file_search_options.hpp  git_index_search.hpp  is_binary.hpp  line_context.hpp  match_handler.hpp  print_help.hpp  search.hpp  search_options.hpp  size_to_bytes.hpp
include/hypergrep/: compiler.hpp  constants.hpp  cpu_features.hpp  directory_search.hpp  file_context.hpp  file_filter.hpp  file_search.hpp  git_index_search.hpp  is_binary.hpp  match_handler.hpp  search_options.hpp  trim_whitespace.hpp
src/: compiler.cpp  cpu_features.cpp  directory_search.cpp  file_filter.cpp  file_search.cpp  filter_file.cpp  git_index_search.cpp  hg.cpp  is_binary.cpp  main.cpp  match_handler.cpp  print_help.cpp  search.cpp  search_options.cpp  size_to_bytes.cpp  trim_whitespace.cpp
